<resources>
    <string name="app_name">HouseRental</string>
    <string name="connect">Connect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_no_account">Do not have account yet ?</string>
    <string name="sign_up">Sign up</string>
    <string name="search_as_guest">Search as guest</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_login_credentials">Enter login credentials</string>
    <string name="remember_my_email">Remember my email</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="title_activity_tenant_main">TenantMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_renting_agency_main">RentingAgencyMainActivity</string>
    <string name="renting_agency">Renting Agency</string>
    <string name="tenant">Tenant</string>
    <string name="select_user_type">Select User Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="confirm_password_not_match">Confirm Password Does Not Match!</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="invalid_password">Invalid Password, must confirm to password policy</string>
    <string name="password_policy">Minimum 8 characters and maximum 15 characters. It must contain at least one number, one lowercase letter, one uppercase letter, and at least one special character from this character set only: $, %, #, @, !, {, and }.</string>
    <string name="error_sign_up">Error Signing Up!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nationality">Nationality</string>
    <string name="residence_country">Residence Country</string>
    <string name="residence_city">Residence City</string>
    <string name="gender">Gender</string>
    <string name="monthly_salary">Gross Monthly Salary</string>
    <string name="occupation">Occupation</string>
    <string name="family_size">Family Size</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_monthly_salary">Enter Monthly Salary</string>
    <string name="invalid_monthly_salary">Invalid Gross Monthy Salary Value</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="enter_family_size">Enter Family Size</string>
    <string name="invalid_family_size">Invalid Family Size</string>
    <string name="first_name_lenght_error">First name should be between 3 and 20 characters long</string>
    <string name="lasst_name_lenght_error">Last name should be between 3 and 20 characters long</string>
    <string name="occupation_lenght_error">Occupation should not exceed 20 characters long</string>
    <string name="agency_name_length_error">Agency name should not exceed 20 characters long</string>
    <string name="sign_up_success">Sign up successfully</string>
    <string name="sign_in_success">Sign in successfully</string>
    <string name="tenant_home">Tenant Home</string>
    <string name="property_search">Property Serach</string>
    <string name="rental_history">Rental History</string>
    <string name="rental_requests">Rental Requests</string>
    <string name="agency_home">Renting Agency Home</string>
    <string name="post_property">Post New Property</string>
    <string name="properties_list">Properties List</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="tenant_profile">Tenant Profile</string>
    <string name="renting_agency_profile">Renting Agency Profile</string>
    <string name="sign_out_confirm">Are you sure you want to sign out ?</string>
    <string name="go_back">Go back</string>
    <string name="save">Save</string>
    <string name="edited_successfully">Edited successfully</string>
    <string name="surface_area">Surface Area</string>
    <string name="bedrooms_count">Bedrooms Count</string>
    <string name="rental_price">Rental Price</string>
    <string name="construction_year">Construction Year</string>
    <string name="availability_date">Availability Date</string>
    <string name="description">Description</string>
    <string name="has_garden">Has Garden ?</string>
    <string name="has_balcony">Has Balcony ?</string>
    <string name="status">Status</string>
    <string name="post_a_property">Post a property</string>
    <string name="enter_surface_area">Enter Surface Area</string>
    <string name="invalid_surface_area_value">Invalid Surface Area Value</string>
    <string name="enter_bedrooms_count">Enter Bedrooms Count</string>
    <string name="invalid_bedrooms_count_value">Invalid Bedrooms Count Value</string>
    <string name="enter_rental_price">Enter Rental Price</string>
    <string name="invalid_rental_price_value">Invalid Rental Price Value</string>
    <string name="enter_construction_year">Enter Construction Year</string>
    <string name="invalid_construction_year_value">Invalid Construction Year Value</string>
    <string name="enter_availability_date">Enter Availability Date</string>
    <string name="select_property_status">Select Property Status</string>
    <string name="select_if_has_balcony">Select if has balcony or not</string>
    <string name="select_if_has_garden">Select if has garden or not!</string>
    <string name="enter_property_description">Enter property description</string>
    <string name="property_description_length_error">Property description must be between 20 and 200 words</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="furnished">Furnished</string>
    <string name="unfurnished">Unfurnished</string>
    <string name="property_info">Property Info</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="is_rented">Is Rented ?</string>
    <string name="edit_property">Edit Property</string>
    <string name="confirm_delete_property">Are you sure you want to delete this property ?</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="property_deleted_successfully">Property Deleted Successfully!</string>
    <string name="edit_info">Edit Information</string>
    <string name="edit_images">Edit Images</string>
    <string name="add_image">Add Image</string>
    <string name="click_to_select_picture">Click on image to select picture</string>
    <string name="select_image">Select Image</string>
    <string name="property_image">Property Image</string>
    <string name="confirm_delete_image">Are you sure you want to delete this picture ?</string>
    <string name="refresh">Refresh</string>
    <string name="min_surface_area">Minimum Surface Area</string>
    <string name="max_surface_area">Maximum Surface Area</string>
    <string name="min_bedrooms_count">Minimum Bedrooms Count</string>
    <string name="max_bedrooms_count">Maximum Bedrooms Count</string>
    <string name="min_rental_price">Minimum Rental Price</string>
    <string name="max_rental_price">Maximum Rental Price</string>
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="awaiting_approval">Awaiting Agency Approve</string>
    <string name="select_date">Select Date</string>
    <string name="result">Result</string>
    <string name="view_tenant">View Tenant</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="view_rental_history">View Rental History</string>
    <string name="tenant_rental_history">Tenant Rental History</string>
    <string name="tenant_name">Tenant Name</string>
</resources>