<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.berziet.houserental.auth.ui.signupmain.SignUpMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="10dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/select_user_type"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/agencyButton"
            android:text="@string/renting_agency"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/tenantButton"
            android:text="@string/tenant"/>

    </LinearLayout>

</RelativeLayout>